Fix safari centering, missing scrollbar width

--- a/src/app/blog/blog.css
+++ b/src/app/blog/blog.css
@@ -3,3 +3,6 @@
   min-height: 60vh;
 }
 
+.pin {
+  list-style-type: "* ";
+}
