--- a/src/app/custom.css
+++ b/src/app/custom.css
@@ -10,7 +10,7 @@
 }
 
 .portrait {
-  border: 2px double black;
-  padding: 6px;
+/*  border: 2px double black;
+  padding: 6px;*/
 }
 
