--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -58,7 +58,9 @@ body {
   padding: var(--line-height) 0ch;
   line-height: var(--line-height);
   overflow-x: hidden;
+  overflow-y: scroll;
   min-height: 100vh;
+  display: grid;
   justify-items: center;
 }
 
